fix - mutantes en negativos